# laser_calibration

./: .gitignore  README.md
calibration_flat/: CMakeLists.txt  package.xml
calibration_flat/action/: ArmToLaserScannerCalibration.action
calibration_flat/calibration_data/: calibration_points.csv  eulerAnglesXYZ.txt  h_B_O.csv  h_B_T.csv  h_L_O.csv  h_T_L.csv  inlier1.csv  inlier2.csv  plotLaserScan1.py  plotLaserScan2.py  plotLaserScanDeltas1.py  plotLaserScanDeltas2.py  plotLaserScanInlier1.py  plotLaserScanInlier2.py  reducedranges1.csv  reducedranges2.csv
calibration_flat/include/calibration_flat/: ArmToLaserScannerCalibrationNode.h  CalibrationObjectPoints.h  LaserScanner.h  Robot.h  Toolbox.h  UserInput.h
calibration_flat/launch/: arm_to_laser_scanner_calibration_hokuyo.launch  arm_to_laser_scanner_calibration_sick.launch
calibration_flat/msg/: UserConfirmation.msg
calibration_flat/src/: ArmToLaserScannerCalibrationNode.cpp  CalibrationObjectPoints.cpp  LaserScanner.cpp  Robot.cpp  UserInput.cpp  main.cpp
hand_guiding/: CMakeLists.txt  package.xml
hand_guiding/action/: HandGuiding.action
hand_guiding/include/hand_guiding/: Robot.h  Toolbox.h
hand_guiding/launch/: hand_guiding.launch
hand_guiding/src/: Robot.cpp  main.cpp
